rustdocs/errors/rust-bitcoin-benches-hashes-cmp.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin_hashes`
 --> ../rust-bitcoin/benches/hashes/cmp.rs:6:5
  |
6 | use bitcoin_hashes::cmp::fixed_time_eq;
  |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_hashes`
  |
help: you might be missing a crate named `bitcoin_hashes`, add it to your project and import it in your code
  |
3 + extern crate bitcoin_hashes;
  |

error[E0432]: unresolved import `bitcoin_hashes`
 --> ../rust-bitcoin/benches/hashes/cmp.rs:5:5
  |
5 | use bitcoin_hashes::{sha256, sha512};
  |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_hashes`
  |
help: you might be missing a crate named `bitcoin_hashes`, add it to your project and import it in your code
  |
3 + extern crate bitcoin_hashes;
  |

error[E0432]: unresolved import `criterion`
 --> ../rust-bitcoin/benches/hashes/cmp.rs:7:5
  |
7 | use criterion::{criterion_group, criterion_main, BenchmarkId, Criterion};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `criterion`
  |
help: you might be missing a crate named `criterion`, add it to your project and import it in your code
  |
3 + extern crate criterion;
  |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
